crates/hwpx/tests/snapshots/font_tests__fontface_tests__fontface_hangul.snap
---
source: crates/hwpx/tests/font_tests.rs
expression: fontface
---
font:
  - "@id": 0
    "@face": Sample Korean Font
    "@type": TTF
    "@isEmbedded": false
"@lang": HANGUL
"@fontCnt": 1
