crates/hwpx/tests/snapshots/font_tests__fontface_tests__fontface_latin.snap
---
source: crates/hwpx/tests/font_tests.rs
expression: fontface
---
font:
  - "@id": 0
    "@face": Sample Sans
    "@type": TTF
    "@isEmbedded": false
  - "@id": 1
    "@face": Sample Serif
    "@type": TTF
    "@isEmbedded": false
"@lang": LATIN
"@fontCnt": 2
