crates/hwpx/tests/snapshots/font_tests__fontface_tests__fontface_symbol.snap
---
source: crates/hwpx/tests/font_tests.rs
expression: fontface
---
font:
  - "@id": 0
    "@face": Sample Symbols
    "@type": TTF
    "@isEmbedded": false
"@lang": SYMBOL
"@fontCnt": 1
